Resolved various deprecation warnings and removed unused imports